@@ -22,6 +22,11 @@ module ActiveMerchant
         init_payment: '/initPayment'
       }
 
+      NETWORK_TOKENIZATION_CARD_MAPPING = {
+        'apple_pay' => 'ApplePay',
+        'google_pay' => 'GooglePay'
+      }
+
       def initialize(options = {})
         requires!(options, :merchant_id, :merchant_site_id, :secret_key)
         super
@@ -150,7 +155,8 @@ module ActiveMerchant
           gsub(%r(("merchantId\\?":\\?")\d+), '\1[FILTERED]').
           gsub(%r(("merchantSiteId\\?":\\?")\d+), '\1[FILTERED]').
           gsub(%r(("merchantKey\\?":\\?")\d+), '\1[FILTERED]').
-          gsub(%r(("accountNumber\\?":\\?")\d+), '\1[FILTERED]')
+          gsub(%r(("accountNumber\\?":\\?")\d+), '\1[FILTERED]').
+          gsub(%r(("cryptogram\\?":\\?")[^"\\]*)i, '\1[FILTERED]')
       end
 
       private
@@ -203,10 +209,21 @@ module ActiveMerchant
         }
       end
 
-      def add_payment_method(post, payment, key = :paymentOption, options = {})
-        payment_data = payment.is_a?(CreditCard) ? credit_card_hash(payment) : payment
+      def add_payment_method(post, payment, key, options = {})
+        payment_data = payment.is_a?(CreditCard) || payment.is_a?(NetworkTokenizationCreditCard) ? credit_card_hash(payment) : payment
+        if payment.is_a?(NetworkTokenizationCreditCard)
+          payment_data[:brand] = payment.brand.upcase
 
-        if payment.is_a?(CreditCard)
+          external_token = {}
+          external_token[:externalTokenProvider] = NETWORK_TOKENIZATION_CARD_MAPPING[payment.source.to_s]
+          external_token[:cryptogram] = payment.payment_cryptogram if payment.payment_cryptogram
+          external_token[:eciProvider] = payment.eci if payment.eci
+
+          payment_data.slice!(:cardNumber, :expirationMonth, :expirationYear, :last4Digits, :brand, :CVV)
+
+          post[:paymentOption] = { card: payment_data.merge(externalToken: external_token) }
+
+        elsif payment.is_a?(CreditCard)
           post[key] = key == :paymentOption ? { card: payment_data } : payment_data
         elsif payment.is_a?(Check)
           post[:userTokenId] = options[:user_token_id]
