@@ -40,6 +40,25 @@ class RemoteNuveiTest < Test::Unit::TestCase
     }
 
     @bank_account = check(account_number: '111111111', routing_number: '999999992')
+
+    @apple_pay_card = network_tokenization_credit_card(
+      '5204245250460049',
+      payment_cryptogram: 'EHuWW9PiBkWvqE5juRwDzAUFBAk=',
+      month: '12',
+      year: Time.new.year + 2,
+      source: :apple_pay,
+      verification_value: 111,
+      eci: '5'
+    )
+
+    @google_pay_card = network_tokenization_credit_card(
+      '4761344136141390',
+      payment_cryptogram: 'YwAAAAAABaYcCMX/OhNRQAAAAAA=',
+      month: '12',
+      year: Time.new.year + 2,
+      source: :google_pay,
+      eci: '5'
+    )
   end
 
   def test_transcript_scrubbing
@@ -291,5 +310,19 @@ class RemoteNuveiTest < Test::Unit::TestCase
     response = @gateway.authorize(1.25, @bank_account, @options)
     assert_success response
     assert_match 'PENDING', response.message
+  end
+
+  def test_successful_purchase_with_apple_pay
+    response = @gateway.purchase(@amount, @apple_pay_card, @options)
+    assert_success response
+    assert_equal 'APPROVED', response.message
+    assert_not_nil response.params[:paymentOption][:userPaymentOptionId]
+  end
+
+  def test_successful_purchase_with_google_pay
+    response = @gateway.purchase(@amount, @google_pay_card, @options)
+    assert_success response
+    assert_equal 'APPROVED', response.message
+    assert_not_nil response.params[:paymentOption][:userPaymentOptionId]
   end
 end
