@@ -52,6 +52,26 @@ class NuveiTest < Test::Unit::TestCase
     }
 
     @bank_account = check()
+
+    @apple_pay_card = network_tokenization_credit_card(
+      '5204 2452 5046 0049',
+      payment_cryptogram: 'EHuWW9PiBkWvqE5juRwDzAUFBAk=',
+      month: '12',
+      year: Time.new.year,
+      source: :apple_pay,
+      verification_value: 111,
+      eci: '5'
+    )
+
+    @google_pay_card = network_tokenization_credit_card(
+      '4761209980011439',
+      payment_cryptogram: 'YwAAAAAABaYcCMX/OhNRQAAAAAA=',
+      month: '11',
+      year: '2022',
+      source: :google_pay,
+      verification_value: 111,
+      eci: '5'
+    )
   end
 
   def test_calculate_checksum_authenticate
@@ -289,6 +309,30 @@ class NuveiTest < Test::Unit::TestCase
         assert_equal '0', json_data['amount']
       end
     end
+  end
+
+  def test_successful_purchase_with_apple_pay
+    stub_comms(@gateway, :ssl_request) do
+      @gateway.purchase(@amount, @apple_pay_card, @options)
+    end.check_request do |_method, endpoint, data, _headers|
+      if /payment/.match?(endpoint)
+        json_data = JSON.parse(data)
+        assert_equal 'ApplePay', json_data['paymentOption']['card']['externalToken']['externalTokenProvider']
+        assert_not_nil json_data['paymentOption']['card']['externalToken']['cryptogram']
+      end
+    end.respond_with(successful_purchase_response)
+  end
+
+  def test_successful_purchase_with_google_pay
+    stub_comms(@gateway, :ssl_request) do
+      @gateway.purchase(@amount, @google_pay_card, @options)
+    end.check_request do |_method, endpoint, data, _headers|
+      if /payment/.match?(endpoint)
+        json_data = JSON.parse(data)
+        assert_equal 'GooglePay', json_data['paymentOption']['card']['externalToken']['externalTokenProvider']
+        assert_not_nil json_data['paymentOption']['card']['externalToken']['cryptogram']
+      end
+    end.respond_with(successful_purchase_response)
   end
 
   private
